# banker

./: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/: config.py  database.py  main.py
backend/migrations/: env.py
backend/models/: __init__.py  account.py  bank.py  category.py  category_rule.py  exchange_rate.py  statement_import.py  transaction.py
backend/parsers/: __init__.py  base.py  registry.py
backend/parsers/banks/: _template.py  hsbc_hk.py
backend/routers/: accounts.py  categories.py  dashboard.py  rules.py  statements.py  transactions.py
backend/schemas/: account.py  category.py  dashboard.py  statement.py  transaction.py
backend/services/: import_service.py  seed.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: DashboardPage.tsx  ImportPage.tsx  RulesPage.tsx  StatementsPage.tsx  TransactionsPage.tsx
frontend/src/types/: index.ts
