[project]
name = "banker"
version = "0.1.0"
description = "Personal accounting tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pdfplumber>=0.11",
    "anthropic>=0.52",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "aiosqlite>=0.21",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
line-length = 100
